--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -321,9 +321,8 @@
       const [searchTerm, setSearchTerm] = React.useState('');
       const [loading, setLoading] = React.useState(true);
       const [error, setError] = React.useState(null);
-      const [isNavigating, setIsNavigating] = React.useState(false);
-      const [navigationMessage, setNavigationMessage] = React.useState('');
-      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbzNIgKK01N-eMYcIilA5q6J12X0ZTAiwVvW3gtQ1ruNVhHtdD-zJV9lLM_9iACQBNb9Uw/exec';
+      const [isNavigating, setIsNavigating] = React.useState(false);      const [navigationMessage, setNavigationMessage] = React.useState('');
+      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbw0nrf_QloPvE3Ig0bWPTFUt98nZCld4Ny2vXq0bcFTz32rihJeZqvcZhEMZgDUyDSuhQ/exec';
 
       // 検針完了日フォーマット関数
       const formatCompletionDate = (dateStr) => {
