--- a/html_files/utilities/column_validation.html
+++ b/html_files/utilities/column_validation.html
@@ -298,10 +298,8 @@ function validateColumnStructure(sheetName, requiredColumns) {
                     <h2>🔄 API接続テスト実行中...</h2>
                     <p>Google Apps Script APIに接続してデータ構造を確認しています...</p>
                 </div>
-            `;
-
-            // GAS Web App URL (実際のURLに置き換えてください)
-            const gasUrl = 'https://script.google.com/macros/s/AKfycbzNIgKK01N-eMYcIilA5q6J12X0ZTAiwVvW3gtQ1ruNVhHtdD-zJV9lLM_9iACQBNb9Uw/exec';
+            `;            // GAS Web App URL (実際のURLに置き換えてください)
+            const gasUrl = 'https://script.google.com/macros/s/AKfycbw0nrf_QloPvE3Ig0bWPTFUt98nZCld4Ny2vXq0bcFTz32rihJeZqvcZhEMZgDUyDSuhQ/exec';
 
             // 物件データのテスト
             fetch(gasUrl + '?action=getProperties')
