--- a/html_files/testing/cors_test.html
+++ b/html_files/testing/cors_test.html
@@ -89,8 +89,7 @@
     </div>
   </div>
 
-  <script>
-    const gasUrlId = 'AKfycbyQ22XFqc8I8eq8khOlds1vdq28_QMBilQM2ASYlSWUEbF3awBgYAsHeRsqdJ6uw_Nd9w';
+  <script>    const gasUrlId = '1vrvf9AJgS3XDnt2pWuB5FRHNVISjFXSe3TpktLibGlVXvl9m-tags8Ei';
     const gasWebAppUrl = `https://script.google.com/macros/s/${gasUrlId}/exec`;
 
     // デバッグ情報を表示
