--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -118,34 +118,31 @@
 
     <script>        // GAS Web App URL取得（property_select.htmlから継承）
         const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl');
-        
-        // URL検証
+          // URL検証
         if (!gasWebAppUrl) {
             showError('<strong>エラー:</strong> Web App URLが設定されていません。物件選択画面から再度アクセスしてください。');
             document.getElementById('loading').innerHTML = 'Web App URLが設定されていません';
             setTimeout(() => window.location.href = 'property_select.html', 3000);
-            return;
+        } else {
+            // URLパラメータから物件IDを取得
+            const urlParams = new URLSearchParams(window.location.search);
+            const propertyId = urlParams.get('propertyId');
+            
+            // 物件IDチェックと処理継続
+            if (!propertyId) {
+                showError('<strong>エラー:</strong> 物件IDが指定されていません。');
+                document.getElementById('loading').innerHTML = '物件IDが指定されていません';
+                setTimeout(() => window.location.href = 'property_select.html', 3000);            } else {
+                // 正常な場合のみloadRoomDataを実行
+                window.onload = loadRoomData;
+            }
         }
-
-        // URLパラメータから物件IDを取得
-        const urlParams = new URLSearchParams(window.location.search);
-        const propertyId = urlParams.get('propertyId');
 
         // エラーメッセージ表示
         function showError(message) {
             const errorDiv = document.getElementById('errorMessage');
             errorDiv.innerHTML = message;
-            errorDiv.style.display = 'block';
-        }
-
-        // 物件IDチェック
-        if (!propertyId) {
-            showError('<strong>エラー:</strong> 物件IDが指定されていません。');
-            document.getElementById('loading').innerHTML = '物件IDが指定されていません';
-            setTimeout(() => window.location.href = 'property_select.html', 3000);
-        } else {
-            window.onload = loadRoomData;
-        }
+            errorDiv.style.display = 'block';        }
 
         async function loadRoomData() {
             try {
