--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -126,7 +126,7 @@
           // URL検証
         if (!gasWebAppUrl) {            showError('<strong>エラー:</strong> Web App URLが設定されていません。物件選択画面から再度アクセスしてください。');
             document.getElementById('loading').innerHTML = 'Web App URLが設定されていません';
-            setTimeout(() => window.location.href = './property_select.html', 3000);
+            setTimeout(() => window.location.href = '/property_select', 3000);
         } else {
             // URLパラメータから物件IDを取得
             const urlParams = new URLSearchParams(window.location.search);
@@ -135,7 +135,7 @@
             // 物件IDチェックと処理継続
             if (!propertyId) {                showError('<strong>エラー:</strong> 物件IDが指定されていません。');
                 document.getElementById('loading').innerHTML = '物件IDが指定されていません';
-                setTimeout(() => window.location.href = './property_select.html', 3000);} else {
+                setTimeout(() => window.location.href = '/property_select', 3000);} else {
                 // 正常な場合のみloadRoomDataを実行
                 window.onload = loadRoomData;
             }
@@ -216,13 +216,13 @@
                     : `${roomName} 未検針`;
 
                 roomButton.innerHTML = `<div class="room-text">${displayText}</div>`;                roomButton.onclick = () => {
-                    window.location.href = `./meter_reading.html?propertyId=${propertyId}&roomId=${room.id}`;
+                    window.location.href = `/meter_reading?propertyId=${propertyId}&roomId=${room.id}`;
                 };
 
                 roomGrid.appendChild(roomButton);
             });
         }        function goBack() {
-            window.location.href = './property_select.html';
+            window.location.href = '/property_select';
         }
     </script>
 </body>
