--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -1390,7 +1390,7 @@
       } catch (error) {
         console.warn('[calculateWarningFlag] エラー:', error);
         return {
-          warningFlag: 'N/A',
+          warningFlag: '閾値: 0',
           standardDeviation: 0,
           threshold: 0,
           reason: 'エラー'
