--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -988,10 +988,23 @@
               <div className="property-info-card">
                 <h2 className="property-name">{propertyName}</h2>
                 <p className="room-info">部屋: {roomName}</p>
-              </div>
-
-              <div className="mantine-paper reading-history-container" style={{padding: 'var(--mantine-spacing-xs)', margin: '0'}}>
+              </div>              <div className="mantine-paper reading-history-container" style={{padding: 'var(--mantine-spacing-xs)', margin: '0'}}>
                 <h3 className="mantine-subtitle desktop-only" style={{ textAlign: 'center', marginBottom: 'var(--mantine-spacing-md)' }}>検針履歴</h3>
+
+                {/* デバッグ情報: 検針データの状態を表示 */}
+                {process.env.NODE_ENV === 'development' && (
+                  <div style={{ 
+                    padding: '8px', 
+                    backgroundColor: '#f0f0f0', 
+                    border: '1px solid #ccc', 
+                    marginBottom: '10px',
+                    fontSize: '0.8em'
+                  }}>
+                    <strong>デバッグ情報:</strong><br/>
+                    meterReadings: {Array.isArray(meterReadings) ? `配列 (長さ: ${meterReadings.length})` : typeof meterReadings}<br/>
+                    データ: {JSON.stringify(meterReadings, null, 2)}
+                  </div>
+                )}
 
                 {Array.isArray(meterReadings) && meterReadings.length > 0 ? (
                   <table className="mantine-table">
