--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -989,10 +989,8 @@
                 <h2 className="property-name">{propertyName}</h2>
                 <p className="room-info">部屋: {roomName}</p>
               </div>              <div className="mantine-paper reading-history-container" style={{padding: 'var(--mantine-spacing-xs)', margin: '0'}}>
-                <h3 className="mantine-subtitle desktop-only" style={{ textAlign: 'center', marginBottom: 'var(--mantine-spacing-md)' }}>検針履歴</h3>
-
-                {/* デバッグ情報: 検針データの状態を表示 */}
-                {process.env.NODE_ENV === 'development' && (
+                <h3 className="mantine-subtitle desktop-only" style={{ textAlign: 'center', marginBottom: 'var(--mantine-spacing-md)' }}>検針履歴</h3>                {/* デバッグ情報: 検針データの状態を表示 */}
+                {true && (
                   <div style={{ 
                     padding: '8px', 
                     backgroundColor: '#f0f0f0', 
