--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -1156,10 +1156,10 @@
                               )}
                             </td>
                           </tr>
-                        );
-                      })}
+                        );                      })}
                     </tbody>
-                  </table>                ) : (
+                  </table>
+                ) : (
                   <div className="mantine-stack">
                     <div className="mantine-alert info">
                       <h3 className="mantine-text weight-600">初回検針</h3>
