--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -988,21 +988,9 @@
               <div className="property-info-card">
                 <h2 className="property-name">{propertyName}</h2>
                 <p className="room-info">部屋: {roomName}</p>
-              </div>              <div className="mantine-paper reading-history-container" style={{padding: 'var(--mantine-spacing-xs)', margin: '0'}}>
-                <h3 className="mantine-subtitle desktop-only" style={{ textAlign: 'center', marginBottom: 'var(--mantine-spacing-md)' }}>検針履歴</h3>                {/* デバッグ情報: 検針データの状態を表示 */}
-                {true && (
-                  <div style={{ 
-                    padding: '8px', 
-                    backgroundColor: '#f0f0f0', 
-                    border: '1px solid #ccc', 
-                    marginBottom: '10px',
-                    fontSize: '0.8em'
-                  }}>
-                    <strong>デバッグ情報:</strong><br/>
-                    meterReadings: {Array.isArray(meterReadings) ? `配列 (長さ: ${meterReadings.length})` : typeof meterReadings}<br/>
-                    データ: {JSON.stringify(meterReadings, null, 2)}
-                  </div>
-                )}                {Array.isArray(meterReadings) && meterReadings.length > 0 && 
+              </div>              <div className="mantine-paper reading-history-container" style={{padding: 'var(--mantine-spacing-xs)', margin: '0'}}>                <h3 className="mantine-subtitle desktop-only" style={{ textAlign: 'center', marginBottom: 'var(--mantine-spacing-md)' }}>検針履歴</h3>
+
+                {Array.isArray(meterReadings) && meterReadings.length > 0 && 
                  meterReadings.some(reading => reading.previousReading && reading.previousReading !== '' && reading.previousReading !== 0) ? (
                   <table className="mantine-table">
                     <thead style={{ display: 'none' }}>
@@ -1013,9 +1001,10 @@
                         <th>状態</th>
                         <th>前回履歴</th>
                       </tr>
-                    </thead>
-                    <tbody>
-                      {meterReadings.map((reading, index) => {
+                    </thead>                    <tbody>
+                      {meterReadings
+                        .filter(reading => reading.previousReading && reading.previousReading !== '' && reading.previousReading !== 0)
+                        .map((reading, index) => {
                         const formattedDate = formatDateForDisplay(reading.date);
                         const inspectionStatus = formatInspectionStatus(reading.date);
                         const dateForDataAttribute = reading.date;
